plugins/plugin-bash-like/web/css/xterm.css
.xterm-container .xterm-rows {
    font-family: var(--font-monospace) !important;
}

tab:not(.xterm-alt-buffer-mode) .xterm-container .xterm-screen {
    height: auto !important;
}

/* alt buffer mode */
tab.xterm-alt-buffer-mode .repl-inner {
    overflow: hidden;
    display: flex;
    align-items: flex-end;
    background: var(--color-stripe-01);
    -webkit-app-region: drag; /* for emacs/vi, in case there is a top slice of repl-inner visible */
}
tab.xterm-alt-buffer-mode .repl-inner .repl-block {
    -webkit-app-region: no-drag; /* but make sure the content of the blocks are not draggable */
}
tab.xterm-alt-buffer-mode .repl-result-spinner {
    display: none;
}
tab.xterm-alt-buffer-mode .repl-block:not(.processing), tab.xterm-alt-buffer-mode .horizontal-landing-zone, tab.xterm-alt-buffer-mode .repl-input {
    display: none;
}
tab.xterm-alt-buffer-mode .repl-output, tab.xterm-alt-buffer-mode .repl-block, tab.xterm-alt-buffer-mode .repl.sidecar-visible .repl-output, tab.xterm-alt-buffer-mode .repl.sidecar-visible .repl-result {
    padding: 0;
}
tab.xterm-alt-buffer-mode .repl {
    /* give a little bit of left-pad for emacs, vi, etc. see https://github.com/IBM/kui/issues/1331 */
    padding-left: 4px;
}

tab:not(.xterm-alt-buffer-mode) .xterm.xterm-empty-row-heuristic .xterm-rows > div:empty {
    display: none;
}

.xterm .xterm-rows .xterm-hidden-row {
    display: none;
}

.xterm-container .xterm-fg-7.xterm-dim {
    opacity: 1;
    color: var(--color-text-02);
}

/* hide cursor block for terminated processes */
.xterm-terminated .xterm-rows .xterm-cursor {
    display: none;
}

/* try to disable xterm components for terminated processes */
.xterm-terminated .xterm-helper-textarea {
    display: none;
    pointer-events: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;    
}

